--- a/ganggang2/src/main/resources/application.properties
+++ b/ganggang2/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database=h2
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type=trace
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
