--- a/gang/build.gradle
+++ b/gang/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
+    implementation 'io.vertx:vertx-core:3.5.3'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
