--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
-      # show_sql: true
+        show_sql: true
         format_sql: true
     generate-ddl: false
