add provinceApi test

--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -1,4 +1,8 @@
+
 spring:
+  h2:
+    console:
+      enabled=true:
   datasource:
     url: jdbc:h2:tcp://localhost/~/gang
     username: sa
@@ -6,9 +10,9 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
     generate-ddl: false
