--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        show_sql: false
+        show_sql: true
         format_sql: true
     generate-ddl: false
+logging.level.org.hibernate.type: trace
