테스트 말고 메인에서 add넣어서 테스트  해봄 둘 다 잘 되는데 테스트에서 add하면 id +2씩됨

--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -16,4 +16,8 @@ spring:
         show_sql: true
         format_sql: true
     generate-ddl: false
-logging.level.org.hibernate.type: trace
+logging:
+  level:
+    org.hibernate.type: trace
+    org.springframework: INFO
+    org.springframework.web: DEBUG
