--- a/gang/build.gradle
+++ b/gang/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'
