--- a/gang/build.gradle
+++ b/gang/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.5'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.0'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+//    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
