--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
     console:
       enabled=true:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/gang
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://127.0.0.1:3306/gang
+    username: gang
+    password: gang1200
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: none
