--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
