--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
 
   datasource:
-    url: jdbc:mysql://13.125.198.11:3306/gang
+    url: jdbc:mysql://127.0.0.1:3306/gang
     username: gang
     password: gang1200
     driver-class-name: org.mariadb.jdbc.Driver
@@ -19,5 +19,5 @@ logging:
     org.hibernate.type: trace
     org.springframework: INFO
     org.springframework.web: DEBUG
-server:
-  port: 80
+#server:
+#  port: 80
