--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: true
@@ -19,7 +19,6 @@ logging:
     org.hibernate.type: trace
     org.springframework: INFO
     org.springframework.web: DEBUG
-server:
-  port: 80
+
 
 
