--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -1,14 +1,13 @@
-
 spring:
 
   datasource:
-    url: jdbc:mysql://172.31.5.157:3306/gang
+    url: jdbc:mysql://13.125.198.11:3306/gang
     username: gang
     password: gang1200
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: true
@@ -19,7 +18,5 @@ logging:
     org.hibernate.type: trace
     org.springframework: INFO
     org.springframework.web: DEBUG
-server:
-  port: 80
-
-
+#server:
+#  port: 80
