--- a/gang/src/main/resources/application.yml
+++ b/gang/src/main/resources/application.yml
@@ -18,5 +18,5 @@ logging:
     org.hibernate.type: trace
     org.springframework: INFO
     org.springframework.web: DEBUG
-server:
-  port: 80
+#server:
+#  port: 80
